--- a/commentlist/package.json
+++ b/commentlist/package.json
@@ -18,7 +18,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token=660b5b7c1949"
   },
   "eslintConfig": {
     "extends": [
